<resources>
    <string name="app_name">Sliide User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_add_user">Add User</string>
    <string name="delete_user_confirmation">Are you sure you want to remove this user?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="please_insert_user_name">Please insert user name</string>
    <string name="please_type_the_user_s_email">Please type the user\'s email</string>
    <string name="email">Email:</string>
    <string name="add_user">Add User</string>
    <string name="blank_field">This field is blank</string>
    <string name="no_users">There are currently no users</string>
    <string name="not_valid_email">Not a valid email address</string>
</resources>